src/test/deca/context/valid/class/declaring_same_field_subclass.deca
/// Description:
// 	  Syntax for classes declaration
//
// Resultats:
// 	  ok
// Historique:
// 	  cree le 17/01/2023

class A {
    int x;
    void f () {}
    int y;
    void g () {}
}

class B extends A {
    int z;
    void f () {}
    void h () {}
    int x; // B has 2 fields 'x' with different indexes
}